# fists-of-fury

./: CMakeLists.txt  README.md  justfile
src/: animation.cpp  animation.h  array_view.h  debug_menu.cpp  debug_menu.h  draw.cpp  draw.h  foward_decls.h  game.cpp  game.h  level_info.cpp  level_info.h  main.cpp  number_types.h  settings.cpp  settings.h  sprite.cpp  sprite.h  utils.h  vec2.cpp  vec2.h
src/entities/: barrel.cpp  barrel.h  bullet.cpp  bullet.h  collectible.cpp  collectible.h  enemy.cpp  enemy.h  entity.cpp  entity.h  gun.cpp  gun.h  knife.cpp  knife.h  player.cpp  player.h
